Added tests to EmailPolicy